welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:7: error: not found: value prendBIscuit
  prendBIscuit();
  ^